syntax = "proto3";

option go_package = "./";
package com.coralogix.alerts.v1;

import "google/protobuf/wrappers.proto";

import "com/coralogix/alerts/v1/alert_severity.proto";
import "com/coralogix/alerts/v1/alert_condition.proto";
import "com/coralogix/alerts/v1/alert_notifications.proto";
import "com/coralogix/alerts/v1/alert_filters.proto";
import "com/coralogix/alerts/v1/alert_active_when.proto";
import "com/coralogix/alerts/v1/date_time.proto";
import "com/coralogix/alerts/v1/tracing_alert.proto";

message MetaLabel {
  google.protobuf.StringValue key = 1;
  google.protobuf.StringValue value = 2;
}

message Alert {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;

  google.protobuf.BoolValue is_active = 4;

  AlertSeverity severity = 5;
  Date expiration = 6;

  AlertCondition condition = 7;
  AlertNotifications notifications = 8;
  AlertFilters filters = 9;

  google.protobuf.DoubleValue notify_every = 10;

  AlertActiveWhen active_when = 11;

  repeated google.protobuf.StringValue notification_payload_filters = 12;

  repeated MetaLabel meta_labels = 13;
  repeated google.protobuf.StringValue meta_labels_strings = 14;

  TracingAlert tracing_alert = 15;

  google.protobuf.StringValue unique_identifier = 16;
}
