syntax = "proto3";
option go_package = "./";
package com.coralogix.alerts.v1;

import "google/protobuf/wrappers.proto";

import "com/coralogix/alerts/v1/alert_severity.proto";
import "com/coralogix/alerts/v1/alert_snoozed.proto";
import "google/protobuf/timestamp.proto";

message AlertEvent {
  google.protobuf.StringValue id = 1;
  AlertEventType type = 2;
  google.protobuf.StringValue alert_id = 3;
  google.protobuf.StringValue company_id = 4;
  AlertSeverity severity = 5;
  google.protobuf.StringValue subsystem = 6;
  google.protobuf.StringValue application = 7;
  google.protobuf.Timestamp occurred_on = 8;
  google.protobuf.StringValue name = 9;
  AlertSnoozed snoozed = 10;
  AlertEventSubType sub_type = 11;

  enum AlertEventType {
    ALERT_EVENT_TYPE_UNSPECIFIED = 0;
    ALERT_EVENT_TYPE_USER_ALERT = 1;
    ALERT_EVENT_TYPE_ANOMALY = 2;
    ALERT_EVENT_TYPE_RATIO = 3;
    ALERT_EVENT_TYPE_NEW_VALUE = 4;
    ALERT_EVENT_TYPE_UNIQUE_COUNT = 5;
    ALERT_EVENT_TYPE_TIME_RELATIVE = 6;
    ALERT_EVENT_TYPE_METRIC = 7;
    ALERT_EVENT_TYPE_FLOW = 8;
  }

  enum AlertEventSubType {
    ALERT_EVENT_SUB_TYPE_UNSPECIFIED = 0;
    ALERT_EVENT_SUB_TYPE_FLOW = 2;
    ALERT_EVENT_SUB_TYPE_VOLUME = 3;
  }
}
