syntax = "proto3";
option go_package = "./";
package com.coralogix.alerts.v1;

enum AlertSeverity {
  ALERT_SEVERITY_INFO_OR_UNSPECIFIED = 0;
  ALERT_SEVERITY_WARNING = 1;
  ALERT_SEVERITY_CRITICAL = 2;
  ALERT_SEVERITY_ERROR = 3;
}
