syntax = "proto3";

package com.coralogix.rules.v1;

import "google/protobuf/wrappers.proto";
option go_package = "./";
message RuleMatcher {
  oneof constraint {
    ApplicationNameConstraint application_name = 1;
    SubsystemNameConstraint subsystem_name = 2;
    SeverityConstraint severity = 9;
  }
}

message ApplicationNameConstraint {
  google.protobuf.StringValue value = 1;
}

message SubsystemNameConstraint {
  google.protobuf.StringValue value = 1;
}

message SeverityConstraint {
  enum Value {
    VALUE_DEBUG_OR_UNSPECIFIED = 0;
    VALUE_VERBOSE = 1;
    VALUE_INFO = 2;
    VALUE_WARNING = 3;
    VALUE_ERROR = 4;
    VALUE_CRITICAL = 5;
  }

  Value value = 1;
}
